--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@chakra-ui/icons": "^2.0.13",
     "@chakra-ui/react": "^2.4.2",
     "@emotion/react": "^11",
@@ -21,6 +22,7 @@
     "eslint-config-next": "13.0.6",
     "ethers": "^5.7.2",
     "framer-motion": "^6",
+    "graphql": "^16.6.0",
     "next": "13.0.6",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
