--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "graphql": "^16.6.0",
     "next": "13.0.6",
     "nextjs-progressbar": "^0.0.16",
+    "node-fetch": "^3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
