--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.4.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@livepeer/react": "^1.5.6",
     "@pushprotocol/restapi": "^0.2.2",
     "@rainbow-me/rainbowkit": "^0.7.1",
     "@types/node": "18.11.10",
