--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@livepeer/react": "^1.5.6",
     "@pushprotocol/restapi": "^0.2.2",
     "@rainbow-me/rainbowkit": "^0.7.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -32,6 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "typescript": "4.9.3",
     "wagmi": "0.6.8"
   },
